deployment-manifest/03-ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: banking-system-ingress-class
spec:
  controller: ingress.k8s.aws/alb
