deployment-manifest/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-system-api-deployment
  labels:
    app: banking-system-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-system-api
  template:
    metadata:
      labels:
        app: banking-system-api
    spec:
      serviceAccountName: banking-system-sa
      containers:
        - name: banking-system-api
          image: "${CONTAINER_IMAGE}"
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
          ports:
            - containerPort: 8080
              name: http-server
