deployment-manifest/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-system-ingress-http
  labels:
    name: banking-system-ingress-http
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: banking-system-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: "80"
    alb.ingress.kubernetes.io/target-type: ip
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    # alb.ingress.kubernetes.io/healthcheck-path: /api/v1/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  ingressClassName: banking-system-ingress-class
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api/v1/
        backend:
          service:
            name: banking-system-api-service
            port:
              number: 80
